--- a/mlb_win_predictor_notebook.ipynb
+++ b/mlb_win_predictor_notebook.ipynb
@@ -26,23 +26,19 @@
         "from sklearn.ensemble import RandomForestRegressor\n",
         "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
         "\n",
-        "# Load the cleaned training and testing datasets\n",
         "train = pd.read_csv('/content/MLB_train.csv')\n",
         "test = pd.read_csv('/content/MLB_test.csv')\n",
         "\n",
-        "# Add a couple derived features that might help the models\n",
         "for df in (train, test):\n",
-        "    df['payroll_per_win'] = df['Total_Payroll'] / df['Wins']  # could be noisy if wins are low\n",
-        "    df['log_pay'] = np.log(df['Total_Payroll'])               # useful for handling scale\n",
+        "    df['payroll_per_win'] = df['Total_Payroll'] / df['Wins']",
+        "    df['log_pay'] = np.log(df['Total_Payroll'])",
         "    df.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
         "    df.dropna(inplace=True)\n",
         "\n",
-        "# Pick the features we'll be using\n",
         "feature_cols = ['Total_Payroll', 'payroll_per_win', 'log_pay']\n",
         "X_train, y_train = train[feature_cols], train['Wins']\n",
         "X_test, y_test = test[feature_cols], test['Wins']\n",
         "\n",
-        "# Trying a few regressors – could add more later\n",
         "models = {\n",
         "    'Linear Regression': LinearRegression(),\n",
         "    'Ridge': Ridge(alpha=1.0),\n",
@@ -69,7 +65,6 @@
         "    plt.savefig(f\"{title.lower().replace(' ', '_')}_resid.png\")\n",
         "    plt.show()\n",
         "\n",
-        "# Train and evaluate each model\n",
         "for name, model in models.items():\n",
         "    model.fit(X_train, y_train)\n",
         "    preds = model.predict(X_test)\n",
