--- a/mlb_win_predictor_notebook.ipynb
+++ b/mlb_win_predictor_notebook.ipynb
@@ -80,7 +80,7 @@
         "\n",
         "results_df = pd.DataFrame(metrics, columns=['Model', 'R²', 'MAE', 'RMSE', 'MBE'])\n",
         "results_df = results_df.sort_values(by='R²', ascending=False)\n",
-        "print(\"📊 Model Performance on Test Data (2019–2024):\")\n",
+        "print(\"Model Performance on Test Data (2019–2024):\")\n",
         "display(results_df)\n",
         "results_df.to_csv(\"model_comparison_metrics.csv\", index=False)\n",
         "\n",
